[package]
name = "tracing-grpc"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]] # Bin to run the gRPC server
name = "grpc-server"
path = "src/server.rs"

[[bin]] # Bin to run the gRPC client
name = "grpc-client"
path = "src/client.rs"

[dependencies]
http = "0.2"
tonic = "0.8.3"
prost = "0.11"
tokio = { version = "1.25", features = ["full"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-jaeger = { verion = "0.17", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.18"
tracing-futures = "0.2"
tracing-appender = "0.2"

[build-dependencies]
tonic-build = "0.8.4"
